new death art additive

--- a/TheLastActivist/Layouts/MainGame.xml
+++ b/TheLastActivist/Layouts/MainGame.xml
@@ -768,6 +768,9 @@
                     <behavior-instances>
                         <behavior-instance type="Flash" />
                     </behavior-instances>
+                    <effect-instances>
+                        <effect-instance type="Color" />
+                    </effect-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
