--- a/TheLastActivist/Layouts/MainGame.uistate.xml
+++ b/TheLastActivist/Layouts/MainGame.uistate.xml
@@ -5,12 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>480</position-x>
-
         <position-y>320</position-y>
         <position-z>197.844</position-z>
         <lookat-x>480</lookat-x>
         <lookat-y>320</lookat-y>
-
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -25,7 +23,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="PC y NPC" />
+    <active-layer name="Ground" />
     <layers>
         <layer locked="0" name="Ground" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Basura" parallax-in-editor="0" visible="1" />
