--- a/TheLastActivist/Layouts/MainGame.xml
+++ b/TheLastActivist/Layouts/MainGame.xml
@@ -768,9 +768,6 @@
                     <behavior-instances>
                         <behavior-instance type="Flash" />
                     </behavior-instances>
-                    <effect-instances>
-                        <effect-instance type="Color" />
-                    </effect-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
@@ -901,14 +898,12 @@
                     <world>
                         <x>-79</x>
                         <y>188</y>
-
                         <z>0</z>
                         <width>79</width>
                         <height>59</height>
                         <depth>0</depth>
-
-                        <hotspotX>0.505882382</hotspotX>
-                        <hotspotY>0.507936537</hotspotY>
+                        <hotspotX>0.506172836</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>1.570796371</angle>
                         <opacity>1</opacity>
                     </world>
@@ -956,7 +951,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1029</x>
+                        <x>1051</x>
                         <y>31</y>
                         <z>0</z>
                         <width>85</width>
@@ -972,6 +967,14 @@
             <effects />
         </layer>
     </layers>
-    <nonworld-instances />
+    <nonworld-instances>
+        <instance type="Array" uid="44">
+            <properties>
+                <width>4</width>
+                <height>10</height>
+                <depth>1</depth>
+            </properties>
+        </instance>
+    </nonworld-instances>
     <effects />
 </c2layout>
